Update 'go-cyjkcmha' component image to: quay.io/rhtap_qe/go-cyjkcmha:5b4dadf8ec6e89af3ae751f53b6a403f281b94d3@sha256:79a487a0f0b592bcf99be6e4b5f3eea6d28b5f726deb51e6379ffa4eddbc0b69

--- a/components/go-cyjkcmha/overlays/development/deployment-patch.yaml
+++ b/components/go-cyjkcmha/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-cyjkcmha
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-cyjkcmha:5b4dadf8ec6e89af3ae751f53b6a403f281b94d3@sha256:79a487a0f0b592bcf99be6e4b5f3eea6d28b5f726deb51e6379ffa4eddbc0b69
+          name: container-image
